Redo: fix gap

--- a/apps/modernization-ui/src/styles/_tooltip.scss
+++ b/apps/modernization-ui/src/styles/_tooltip.scss
@@ -9,11 +9,11 @@ $bubbleWidth: calc($arrowWidth + 100%);
         #{$position}: $bubbleWidth;
 
         @if $offset == 'left' {
-            right: 100%;
-            transform: translateX($arrowBuffer);
+            left: 100%;
+            transform: translateX(-100%);
         } @else if $offset == 'right' {
-            right: 0;
-            transform: translateX(calc(100% - $arrowBuffer));
+            left: 25%;
+            transform: translateX(-10%);
         } @else if $offset == 'center' {
             left: 50%;
             transform: translateX(-50%);
@@ -62,7 +62,7 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         font-weight: normal;
         font-size: 0.875rem;
-        line-height: 1.3;
+        line-height: 1.2;
     }
 
     &::after {
@@ -111,6 +111,7 @@ $bubbleWidth: calc($arrowWidth + 100%);
         &::after {
             border-bottom-width: $arrowWidth;
             top: 100%;
+            transform: translateY(calc(-1 * #{$arrowWidth}));
             @include vertical-arrow();
         }
     }
@@ -122,7 +123,8 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         &::after {
             border-left-width: $arrowWidth;
-            right: $bubbleWidth;
+            right: 100%;
+            transform: translateX(calc(-1 * #{$arrowWidth}));
             @include horizontal-arrow();
         }
     }
@@ -134,7 +136,8 @@ $bubbleWidth: calc($arrowWidth + 100%);
 
         &::after {
             border-right-width: $arrowWidth;
-            left: $bubbleWidth;
+            left: 100%;
+            transform: translateX(calc(-1 * #{$arrowWidth}));
             @include horizontal-arrow();
         }
     }
@@ -165,6 +168,7 @@ $bubbleWidth: calc($arrowWidth + 100%);
         &::after {
             border-top-width: $arrowWidth;
             bottom: 100%;
+            transform: translateY(calc(-1 * #{$arrowWidth}));
             @include vertical-arrow();
         }
     }
